Fix for thumnails not covering full available space

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,8 +87,8 @@ a { color: #eee; }
     height: 100vh;
     max-height:100vh;
     width:100vw;
-    background-size: 100vw;
-    background-position:top left;
+    background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
 }
 
